fix(ui): fix readability issue on darkmode dropdown

--- a/stackgres-k8s/src/admin-ui/public/assets/css/sg-1.0.css
+++ b/stackgres-k8s/src/admin-ui/public/assets/css/sg-1.0.css
@@ -824,3 +824,8 @@ form .sectionTitle {
     display: block;
     margin-bottom: 20px;
 }
+
+.darkmode select.plain {
+    background-color: var(--activeBg);
+    color: #e3e3e3;
+}
